--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
                 };
                 $.ajax({
                     method: "POST",
-                    url: "http://127.0.0.1:2024/clientresponse",
+                    url: "mongodb+srv://shubhamgaikwad2k4:hCpfqruub8PlI9rD@portfolio.cdkosbs.mongodb.net/portfolio?retryWrites=true&w=majority&appName=portfolio/clientresponse",
                     data: customerData
                 })
                     .then(function () {
