--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
                 };
                 $.ajax({
                     method: "POST",
-                    url: "shubham-gaikwad.vercel.app/clientresponse",
+                    url: "https://shubham-gaikwad.vercel.app/clientresponse",
                     data: customerData
                 })
                     .then(function () {
